# dash2

./: .gitignore  .prettierignore  edge.html  flake.nix  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  test.html  tsconfig.json  vite.config.ts
src/: clock.ts  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: battery.rs  config.rs  hyprland.rs  layer_shell.rs  main.rs  power.rs  util.rs
src-tauri/src/desktop/: mod.rs
src-tauri/src/greeter/: greetd.rs  mod.rs
src-tauri/src/hyprland/: data.rs  dispatch.rs  events.rs  mod.rs  types.rs
src-tauri/src/pam/: converse.rs  mod.rs
src-tauri/src/panels/: mod.rs  wayland.rs
src-tauri/src/session_lock/: mod.rs  wayland.rs
src/bars/: Bars.tsx  index.html  main.tsx
src/control/: Control.tsx  index.html  main.tsx  styles.css
src/desktop/: Desktop.tsx  main.tsx
src/login/: Login.tsx  blank.html  index.html  main.tsx  styles.css
src/panels/: index.html
src/workspace/: Workspace.tsx  main.tsx
