[package]
name = "dash2"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = ["unstable"] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.75"
gtk-layer-shell = "0.8.1"
gtk = "0.18.1"
gdk = "0.18.0"
webkit2gtk = "2.0.1"
tokio = { version = "1.39.3", features = ["full"] }
upower_dbus = "0.3.2"
zbus = "^3.7.0"
futures = "0.3.30"
thiserror = "1.0"
pam-sys = "0.5.6"
libc = "0.2"
