[package]
name = "dash2"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-rc.6", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.6", features = ["unstable"] }
tauri-plugin-shell = "2.0.0-rc.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.75"
gtk-layer-shell = { version = "0.8.1", features = ["v0_6"] }
gtk = { version = "0.18.1", features = ["v3_24"] }
gdk = { version = "0.18.0", features = ["v3_24"] }
webkit2gtk = { version = "2.0.1", features = ["v2_38"] }
gdkwayland = "0.18.0"
gdkwayland-sys = "0.18.0"
tokio = { version = "1.39.3", features = ["full"] }
upower_dbus = "0.3.2"
zbus = "^3.7.0"
futures = "0.3.30"
thiserror = "1.0"
pam-sys = "0.5.6"
libc = "0.2"
wayland-client = "0.31.5"
wayland-backend = { version = "0.3.6", features = ["client_system"] }
smithay-client-toolkit = "0.19.2"
rand = "0.8"
regex = "1.10"
once_cell = "1.19"
clap = { version = "4.5.16", features = ["derive"] }
toml = "0.8.19"
dirs = "5.0.1"
greetd_ipc = { version = "0.10.3", features = ["tokio-codec"] }

# Transitive dependencies required for the flake build
hyper-tls = "0.6.0"
rustls-pemfile = "2.1.3"
